--- a/index.html
+++ b/index.html
@@ -1,78 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <style>Body{
-        font-family: Calibri; Helvetica, sans-serif;
-        background-color: pink;
-    }
-    button{
-        background-color: #4CAF50;
-        width: auto;
-        color: orange;
-        padding: 10px;
-        margin: 10px 10px;
-        border: none;
-        cursor: pointer;
-        position: relative;
-    }
-    form
-    {
-        border:3px solid #f1f1f1;
-    }
-    input[type=text],input[type=password]{
-    width: 50%;
-    margin: 8px 0;
-    padding: 12px 20px;
-    display: inline-block;
-    border: 2px solid green;
-    box-sizing: border box;
-    position: relative;
-    }
-    input[type=radio]{
-        display: inline-block;
-    }
-    button:hover{
-        opacity:0.7;
-    }
-    .break-point::before{
-        content:"hiddentext";
-        font-size: 0;
-        display: block;
-        line-height:0;
-    }
-    .break-point::after{
-        content: "hiddentext";
-        font-size: 0;
-        display: block;
-        line-height: 0;
-    }
-    .container{
-        padding: 25px;
-        background-color: lightblue;
-    }
-    h1{
-        text-align: center;
-    }</style>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="style.css"> 
+
+<title>Data Manipulation</title>
 </head>
 <body>
-    <h1>Student Login Form</h1>
-    <form action="login.php" method="post">
-<div class="container">
-    <label>Username:</label>
-    <input type="text" placeholder="Enter username" name="uname" required>
-    <br/><br/>
-    <label>Password:</label>
-    <input type="password" placeholder="Enter Password" name="pwd" required>
-    <br/><br/>
-    &nbsp;&nbsp;&nbsp;&nbsp;
-    <button type="submit">Login</button>
-    <button type="reset" class="cancelbtn">Cancel</button>
-    <br/><br/>
-    <input type="checkbox" checked="checked">Remember me <a href="#">Forgot Password?</a>
-</div>
-</form>
+    <center>
+        <form action="insert.php" method="post">
+            <h1>Storing Data Into Database</h1>
+            <label for="firstname">Firstname:</label>
+            <input type="text" 
+            name="first_name" 
+            id="first_name" required><br>
+            <label for="lastname">Lastname:</label>
+            <input type="text"
+            name="last_name"
+            id="last_name"
+            required><br>
+            <label for="gender">Gender</label>
+            <input type="radio"
+            name="gender" id="gender"/>Male
+            <input type="radio"
+            name="gender"
+            id="gender"/>Female
+            <br>
+            <label for="address">Address</label>
+            <input type="text"
+            name="address"
+            id="address" required/>
+            <p>
+                <button type="submit">SUBMIT</button>
+                <button type="reset">CANCEL</button>
+            </p>
+    </form>
+    </center>
 </body>
-</html>
